@@ -50,13 +50,19 @@ or as base classes.
    using the reference concrete syntax.
 
 
-.. class:: XMLGenerator(out=None, encoding='iso-8859-1')
+.. class:: XMLGenerator(out=None, encoding='iso-8859-1', short_empty_elements=False)
 
    This class implements the :class:`ContentHandler` interface by writing SAX
    events back into an XML document. In other words, using an :class:`XMLGenerator`
    as the content handler will reproduce the original document being parsed. *out*
    should be a file-like object which will default to *sys.stdout*. *encoding* is
    the encoding of the output stream which defaults to ``'iso-8859-1'``.
+   *short_empty_elements* controls the formatting of elements that contain no
+   content:  if *False* (the default) they are emitted as a pair of start/end
+   tags, if set to *True* they are emitted as a single self-closed tag.
+
+   .. versionadded:: 3.2
+      short_empty_elements
 
 
 .. class:: XMLFilterBase(base)
