@@ -34,6 +34,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1343: xml.sax.saxutils.XMLGenerator now has an option
+  short_empty_elements to direct it to use self-closing tags when appropriate.
+
 - Issue #9807 (part 1): Expose the ABI flags in sys.abiflags.  Add --abiflags
   switch to python-config for command line access.
 
